scroll exp modified

--- a/scrolling task/scroll.html
+++ b/scrolling task/scroll.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scroll Alert Page</title>
+    <title>Scroll Experiment</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,13 @@
     <div class="section section5">DIV 5</div>
     <div class="section section6">DIV 6</div>
     <div class="section section7">DIV 7</div>
-    
+
+    <!-- 트라이얼 데이터 표시 -->
+    <div id="trialInfo">
+        <p>현재 트라이얼: <span id="currentTrial">1</span></p>
+        <p>타겟 DIV: <span id="targetDiv">-</span></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
