--- a/dragging_task/drag.html
+++ b/dragging_task/drag.html
@@ -9,24 +9,24 @@
 <body>
 
 <div class="overlay">
-    <div class="message">실험을 시작합니다</div>
+    <div class="message">준비되시면 시작해주세요.</div>
     <button id="startButton">시작</button>
 </div>
 
-<div id="resultMessage" class="result-message"></div> <!-- 성공/실패 메시지 표시용 -->
+<div id="resultMessage" class="resultMessage"></div> <!-- 성공/실패 메시지 표시용 -->
 
-<div class="container">
-    <div id="centerBox" draggable="true"></div>
-    <div id="topLeft" class="cornerBox"></div>
-    <div id="topRight" class="cornerBox"></div>
-    <div id="bottomLeft" class="cornerBox"></div>
-    <div id="bottomRight" class="cornerBox"></div>
+<div class="wrapper">
+    <div id="centerCircle" draggable="true"></div>
+    <div id="cornerTopLeft" class="cornerCircle"></div>
+    <div id="cornerTopRight" class="cornerCircle"></div>
+    <div id="cornerBottomLeft" class="cornerCircle"></div>
+    <div id="cornerBottomRight" class="cornerCircle"></div>
 
-    <!-- 각 모서리와 중앙의 중간 지점에 위치한 빨간색 상자들 -->
-    <div id="topLeftCenter" class="cornerBox"></div>
-    <div id="topRightCenter" class="cornerBox"></div>
-    <div id="bottomLeftCenter" class="cornerBox"></div>
-    <div id="bottomRightCenter" class="cornerBox"></div>
+    <!-- 각 모서리와 중앙의 중간 지점에 위치한 빨간색 원들 -->
+    <div id="midTopLeft" class="cornerCircle"></div>
+    <div id="midTopRight" class="cornerCircle"></div>
+    <div id="midBottomLeft" class="cornerCircle"></div>
+    <div id="midBottomRight" class="cornerCircle"></div>
 </div>
 
 <script src="script.js"></script>
