from the bottom

--- a/dragging_task/drag.html
+++ b/dragging_task/drag.html
@@ -10,7 +10,7 @@
 
 <div class="overlay">
     <div class="message">준비되시면 시작해주세요.</div>
-    <button id="startButton">시작</button>
+    <button id="startButton" disabled>시작</button>
 </div>
 
 <div id="resultMessage" class="resultMessage"></div> <!-- 성공/실패 메시지 표시용 -->
